src/objects/CP_Chatter_Group_Pulse__c.object
<CustomObject>
    <description>Analytic Snapshot storage for Chatter Group statistics</description>
    <fields>
        <fullName>Comment_Count__c</fullName>
        <description>Sum of the comments in a given group for the specified reporting date</description>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Count__c</fullName>
        <description>The number of feed posts in a given Chatter group on the specific reporting date</description>
        <label>Feed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Count__c</fullName>
        <description>The number of &quot;Likes&quot; in a given Chatter group on a given reporting date across all posts in that group</description>
        <label>Like Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <description>Number of group members on the reporting date</description>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Analytic Snapshot date for Chatter group statistics</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Group_Activity__c</fullName>
        <description>The total count of feed items (posts) as well as comments and likes for the specified date for a given chatter group</description>
        <label>Total Group Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chatter Pulse - Groups</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>CP: Chatter Group Popularity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Pulse - Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>